apps/base/prometheus/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: prometheus-auth
  namespace: prometheus
spec:
  basicAuth:
    secret: prometheus-basic-auth
